@@ -1,4 +1,5 @@
-9/28/10 fixed plate separation drag handler
+9/28/10 fixed plate area drag handle
+9/28/10 fixed plate separation drag handle
 9/28/10 a rough version of showing plate charges, to demonstrate that this design does not scale well
 9/28/10 converted everything to use 3D MVT to create perspective (big change, broke 2 drag handles) [44484]
 9/28/10 first attempt at adding 3D model to 2D view transform to MVT (untested)
